[gd_scene load_steps=3 format=3 uid="uid://cmo78vpyllsmp"]

[ext_resource type="Script" uid="uid://xeenmv8f8au0" path="res://src/ui_widgets/optimizer_setting_info.gd" id="1_hf6yr"]
[ext_resource type="Script" uid="uid://dh5mir6i27u4u" path="res://src/ui_widgets/BetterTextEdit.gd" id="2_lgjs3"]

[node name="OptimizerSettingInfo" type="PanelContainer"]
offset_top = 156.0
offset_right = 724.0
offset_bottom = 156.0
theme_type_variation = &"SpaciousPanel"
script = ExtResource("1_hf6yr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(725, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(725, 0)
layout_mode = 2
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BeforeBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BeforeLabel" type="Label" parent="VBoxContainer/HBoxContainer/BeforeBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="BeforeTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/BeforeBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
editable = false
indent_wrapped_lines = true
script = ExtResource("2_lgjs3")
metadata/_custom_type_script = "uid://dh5mir6i27u4u"

[node name="AfterBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AfterLabel" type="Label" parent="VBoxContainer/HBoxContainer/AfterBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="AfterTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/AfterBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
editable = false
indent_wrapped_lines = true
script = ExtResource("2_lgjs3")
metadata/_custom_type_script = "uid://dh5mir6i27u4u"
